plugins {
    id 'maven-publish'
    id 'signing'
    id 'jacoco'
    id 'com.github.spotbugs' version '5.0.13'
    id 'checkstyle'
    id 'org.sonarqube' version '3.5.0.2730'
    id 'pmd'
    id 'java-test-fixtures'
}

allprojects {
    group 'io.github.mfvanek'
    version '0.9.0-SNAPSHOT'

    repositories {
        mavenLocal()
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'org.sonarqube'
    apply plugin: 'checkstyle'
    apply plugin: 'pmd'
    apply plugin: 'com.github.spotbugs'
    apply plugin: 'jacoco'
    apply plugin: 'maven-publish'
    apply plugin: 'signing'
    apply plugin: 'java-test-fixtures'

    ext {
        slf4jVersion = '2.0.6'
        logbackVersion = '1.4.5'
        dbcp2Version = '2.9.0'
        testcontainersVersion = '1.17.6'
        postgresqlVersion = '42.5.3'
        mockitoVersion = '5.1.1'
        awaitilityVersion = '4.2.0'
        equalsverifierVersion = '3.13.1'
        commonsLang3Version = '3.12.0'
        jsr305Version = '3.0.2'
        customMaxParallelForks = 3 // try to set a higher value to speed up the local build
    }

    dependencies {
        implementation "com.google.code.findbugs:jsr305:${jsr305Version}"

        testImplementation 'org.assertj:assertj-core:3.24.2'
        testImplementation enforcedPlatform('org.junit:junit-bom:5.9.2')
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
        testImplementation 'org.junit.jupiter:junit-jupiter-api'

        checkstyle 'com.thomasjensen.checkstyle.addons:checkstyle-addons:7.0.1'
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
        withJavadocJar()
        withSourcesJar()
    }

    jar {
        manifest {
            attributes("Implementation-Title": project.name,
                    "Implementation-Version": project.version)
        }
    }

    javadoc {
        if (JavaVersion.current().isJava9Compatible()) {
            options.addBooleanOption('html5', true)
        }
    }

    checkstyle {
        toolVersion '10.5.0'
        configFile file("../config/checkstyle/checkstyle.xml")
        ignoreFailures = false
        maxWarnings = 0
        maxErrors = 0
    }
//    checkstyleMain {
//        source ='src/main/java'
//    }
//    checkstyleTest {
//        source ='src/test/java'
//    }

    pmd {
        consoleOutput = true
        toolVersion = '6.52.0'
        ruleSetFiles = files("../config/pmd/pmd.xml")
        ruleSets = []
    }

    spotbugsMain {
        reports {
            html.enabled = true
        }
    }
    spotbugsTest {
        reports {
            html.enabled = true
        }
    }
    spotbugs {
        showProgress = true
        effort = 'max'
        reportLevel = 'low'
        excludeFilter = file("../config/spotbugs/exclude.xml")
    }

    jacocoTestReport {
        reports {
            xml.enabled true
            html.enabled true
        }
    }
    jacocoTestCoverageVerification {
        dependsOn test
        violationRules {
            rule {
                limit {
                    counter = 'CLASS'
                    value = 'MISSEDCOUNT'
                    maximum = 0
                }
            }
            rule {
                limit {
                    counter = 'METHOD'
                    value = 'MISSEDCOUNT'
                    maximum = 0
                }
            }
            rule {
                limit {
                    counter = 'LINE'
                    value = 'MISSEDCOUNT'
                    maximum = 0
                }
            }
            rule {
                limit {
                    counter = 'INSTRUCTION'
                    value = 'COVEREDRATIO'
                    minimum = 1.0
                }
            }
            rule {
                limit {
                    counter = 'BRANCH'
                    value = 'COVEREDRATIO'
                    minimum = 1.0
                }
            }
        }
    }
    check.dependsOn jacocoTestReport, jacocoTestCoverageVerification

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
                versionMapping {
                    usage('java-api') {
                        fromResolutionOf('runtimeClasspath')
                    }
                    usage('java-runtime') {
                        fromResolutionResult()
                    }
                }

                pom {
                    name = project.name
                    description = 'pg-index-health is a Java library for analyzing and maintaining indexes health in PostgreSQL databases.'
                    url = 'https://github.com/mfvanek/pg-index-health'
                    licenses {
                        license {
                            name = 'Apache License Version 2.0'
                            url = 'https://www.apache.org/licenses/LICENSE-2.0'
                        }
                    }

                    developers {
                        developer {
                            id = 'mfvanek'
                            name = 'Ivan Vakhrushev'
                            email = 'mfvanek@gmail.com'
                        }
                    }

                    scm {
                        connection = 'scm:git:https://github.com/mfvanek/pg-index-health.git'
                        developerConnection = 'scm:git@github.com:mfvanek/pg-index-health.git'
                        url = 'https://github.com/mfvanek/pg-index-health'
                    }
                }
            }
        }

        repositories {
            maven {
                def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
                def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots"
                url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
                credentials {
                    username sonatypeUsername
                    password sonatypePassword
                }
            }
        }
    }

    signing {
        if (!version.endsWith('SNAPSHOT')) {
            useGpgCmd()
            sign publishing.publications.mavenJava
        }
    }
}

sonarqube {
    properties {
        property "sonar.projectKey", "mfvanek_pg-index-health"
        property "sonar.organization", "mfvanek"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}
